--- a/MVC_MultitecUA/Views/Noticia/VistaUsuario/Noticia.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/VistaUsuario/Noticia.cshtml
@@ -1,17 +1,37 @@
 ﻿@model MultitecUAGenNHibernate.EN.MultitecUA.NoticiaEN
 
 @{
-	ViewBag.Title = "Noticia";
+    ViewBag.Title = "Noticia";
 }
 
-<div>
-	<h2 style="">@Html.DisplayFor(model => model.Titulo)</h2>
-	<hr />
-	<label>
-		@Html.DisplayFor(model => model.Fecha)
-	</label>
-	<hr />
-	<img src="@Html.DisplayFor(model => model.FotoNoticia)"/>
-	<hr />
-	@Html.Raw(Model.Cuerpo)
-</div>
+<br />
+<br />
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 ">
+
+                <h1 class="mt-4" style="margin:0; text-align:center;">@Html.DisplayFor(model => model.Titulo)</h1>
+                <br />
+                <p class="text-center">
+                    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
+                </p>
+
+                <hr style="margin-bottom:.75em;" />
+                <p style=" text-align:center;"><b>@Html.DisplayFor(model => model.Fecha)</b></p>
+                <hr style="margin-top:.5em;" />
+
+
+                <center>
+                    <img class="img-fluid rounded" style="width:50%; text-align:center;" src="@Html.DisplayFor(model=>model.FotoNoticia)" alt="Foto de noticia">
+                    <br />
+                    <br />
+                    <br />
+                    <pre style="text-align:justify; margin: 0 5em; padding:0 3em;">@Html.DisplayFor(model => model.Cuerpo)</pre>
+                </center>
+
+            </div>
+
+        </div>
+
+    </div>
