--- a/MVC_MultitecUA/Views/NotificacionUsuario/MisNotificaciones.cshtml
+++ b/MVC_MultitecUA/Views/NotificacionUsuario/MisNotificaciones.cshtml
@@ -6,107 +6,103 @@
 	ViewBag.Title = "MisNotificaciones";
 }
 
-<h2>Mis Notificaciones</h2>
-
-<p>
-	@Html.ActionLink("Ver no leídas", "NoLeidas")
-</p>
-@if ((int)ViewData["notificaciones"] > 0)
-{
-	<table class="table">
-		<tr>
-			<th>
-				@Html.DisplayName("Título")
-			</th>
-			<th>
-				@Html.DisplayName("Mensaje")
-			</th>
-			<th>
-				@Html.DisplayName("Fecha")
-			</th>
-			<th>
-				@if ((int)ViewData["NoLeidas"] > 0)
-				{
-					@Html.ActionLink("Marcar todas como leídas", "LeerNotificacion", new { origen = "MisNotificaciones" })
-				}
-				else
-				{
-					@Html.DisplayName("Marcar todas como leídas")
-				}
-			</th>
-			<th>
-				@Html.ActionLink("Borrar todas", "BorrarNotificacion", new { origen = "MisNotificaciones" })
-			</th>
-		</tr>
-
-		@{
-			foreach (var item in Model)
-			{
-				NotificacionCEN notificacionCEN = new NotificacionCEN();
-				NotificacionEN notificacion = notificacionCEN.ReadOID(item.NotificacionGenerada.Id);
-				string tipo = null;
-				string accion = null;
-				int? OID = null;
-
-				switch (notificacion.GetType().Name)
-				{
-					case "NotificacionEventoEN":
-						NotificacionEventoCEN eventoCEN = new NotificacionEventoCEN();
-						OID = eventoCEN.ReadOID(notificacion.Id).EventoGenerador.Id;
-						tipo = "Evento";
-						accion += "Detalles";
-						break;
-					case "NotificacionProyectoEN":
-						NotificacionProyectoCEN proyectoCEN = new NotificacionProyectoCEN();
-						OID = proyectoCEN.ReadOID(notificacion.Id).ProyectoGenerador.Id;
-						tipo = "Proyecto";
-						accion += "Detalles";
-						break;
-					case "NotificacionMensajeEN":
-						NotificacionMensajeCEN mensajeCEN = new NotificacionMensajeCEN();
-						OID = mensajeCEN.ReadOID(notificacion.Id).MensajeGenerador.Id;
-						tipo = "Mensaje";
-						accion += "DetalleMensajeRecibido";
-						break;
-					case "NotificacionSolicitudEN":
-						NotificacionSolicitudCEN solicitudCEN = new NotificacionSolicitudCEN();
-						OID = solicitudCEN.ReadOID(notificacion.Id).SolicitudGeneradora.Id;
-						tipo = "Solicitud";
-						accion += "DetailsCliente";
-						break;
-				}
-				<tr>
-					<td>
-						@if (tipo != null && accion != null && OID != null)
-						{
-							string ruta = "../" + tipo + "/" + accion;
-							@Html.ActionLink(notificacion.Titulo, ruta, new { id = OID })
-						}
-						else
-						{
-							@notificacion.Titulo;
-						}
-					</td>
-					<td>
-						@notificacion.Mensaje
-					</td>
-					<td>
-						@notificacion.Fecha.ToString()
-					</td>
-					<td>
-						@if ((int)item.Estado == 2) // 1 - Leido	2 - No Leido
-						{
-							@Html.ActionLink("Marcar como leída", "LeerNotificacion", new { OID = item.Id, origen = "MisNotificaciones" })
-						}
-					</td>
-					<td>
-						@Html.ActionLink("Borrar", "BorrarNotificacion", new { OID = item.Id, origen = "MisNotificaciones" })
-					</td>
+<h2 class="text-center">Notificaciones</h2>
+<hr />
+<div style="display:flex;justify-content:space-evenly;">
+	<p class="btn btn-default">
+		@Html.ActionLink("Notificaciones no leídas", "NoLeidas", null, new { @style = "text-decoration:none;" })
+	</p>
+	<h5>Todas las notificaciones</h5>
+</div>
+	<hr />
+	@if ((int)ViewData["notificaciones"] > 0)
+	{
+		<table class="table table-hover text-center">
+			<thead>
+				<tr style="background-color: gainsboro;">
+					<th class="text-center" style="vertical-align: middle;">
+						@Html.DisplayName("Título")
+					</th>
+					<th class="text-center" style="vertical-align: middle;">
+						@Html.DisplayName("Mensaje")
+					</th>
+					<th class="text-center" style="vertical-align: middle;">
+						@Html.DisplayName("Fecha")
+					</th>
+					<th class="text-center" style="vertical-align: middle;">
+						@Html.ActionLink("Leer todo", "LeerNotificacion", new { origen = "MisNotificaciones" }, new { @style = "text-decoration: none;" })
+					</th>
+					<th class="text-center" style="vertical-align: middle;">
+						@Html.ActionLink("Borrar todo", "BorrarNotificacion", new { origen = "MisNotificaciones" }, new { @style = "text-decoration: none;", @class = "text-danger" })
+					</th>
 				</tr>
-			}
-		}
-	</table>
-			}
-			else {
-				<h4>No tienes notificaciones</h4>
-			}
+			</thead>
+			<tbody>
+				@{
+					foreach (var item in Model)
+					{
+						NotificacionCEN notificacionCEN = new NotificacionCEN();
+						NotificacionEN notificacion = notificacionCEN.ReadOID(item.NotificacionGenerada.Id);
+						string tipo = null;
+						string accion = null;
+						int? OID = null;
+
+						switch (notificacion.GetType().Name)
+						{
+							case "NotificacionEventoEN":
+								NotificacionEventoCEN eventoCEN = new NotificacionEventoCEN();
+								OID = eventoCEN.ReadOID(notificacion.Id).EventoGenerador.Id;
+								tipo = "Evento";
+								accion += "Detalles";
+								break;
+							case "NotificacionProyectoEN":
+								NotificacionProyectoCEN proyectoCEN = new NotificacionProyectoCEN();
+								OID = proyectoCEN.ReadOID(notificacion.Id).ProyectoGenerador.Id;
+								tipo = "Proyecto";
+								accion += "Detalles";
+								break;
+							case "NotificacionMensajeEN":
+								NotificacionMensajeCEN mensajeCEN = new NotificacionMensajeCEN();
+								OID = mensajeCEN.ReadOID(notificacion.Id).MensajeGenerador.Id;
+								tipo = "Mensaje";
+								accion += "DetalleMensajeRecibido";
+								break;
+							case "NotificacionSolicitudEN":
+								NotificacionSolicitudCEN solicitudCEN = new NotificacionSolicitudCEN();
+								OID = solicitudCEN.ReadOID(notificacion.Id).SolicitudGeneradora.Id;
+								tipo = "Solicitud";
+								accion += "DetailsCliente";
+								break;
+						}
+
+						string ruta = "../" + tipo + "/" + accion + "?id=" + OID;
+
+						<tr onclick="window.location = '@ruta'" style="cursor:pointer;">
+							<td>
+								@notificacion.Titulo
+							</td>
+							<td>
+								@notificacion.Mensaje
+							</td>
+							<td>
+								@notificacion.Fecha.ToString()
+							</td>
+							<td>
+								@if ((int)item.Estado == 2) // 1 - Leido	2 - No Leido
+								{
+									@Html.ActionLink(" ", "LeerNotificacion", new { OID = item.Id, origen = "MisNotificaciones" }, new { @class = "glyphicon glyphicon-eye-open", @title = "Marcar como leída", @style = "text-decoration: none;" })
+								}
+							</td>
+							<td>
+								@Html.ActionLink(" ", "BorrarNotificacion", new { OID = item.Id, origen = "MisNotificaciones" }, new { @class = "glyphicon glyphicon-trash text-danger", @title = "Borrar", @style = "text-decoration: none;" })
+							</td>
+						</tr>
+					}
+				}
+			</tbody>
+		</table>
+	}
+	else
+	{
+		<h5 class="text-danger text-center">No tienes notificaciones</h5>
+	}
