--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -177,12 +177,16 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" >
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Portal Web de la <a href="http://multitecua.ml">Asociación de Estudiantes MultitecUA</a> de la Universidad de Alicante</p>
-        </footer>
+        <div style="position:absolute; z-index:auto;">
+
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Portal Web de la <a href="http://multitecua.ml">Asociación de Estudiantes MultitecUA</a> de la Universidad de Alicante</p>
+            </footer>
+        </div>
+       
     </div>
 
     @Scripts.Render("~/bundles/jquery")
